welcome.lessons.welcome.bat.bool2.CigarParty.scala.error
caughtSpeeding:9: error: type mismatch;
 found   : Unit
 required: Int
  	if(speed>=81){
        ^caughtSpeeding:20: error: type mismatch;
 found   : Unit
 required: Int
  	if(speed>=86){
        ^